--- a/html-css/Exercicios/ex 014/estilo/style.css
+++ b/html-css/Exercicios/ex 014/estilo/style.css
@@ -57,6 +57,11 @@ header > h1 {
     margin-bottom: 20px;
     font-size: 3em;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.436);
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 20px;
+    max-width: 500px;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.436);
 }
 
 header > p {
@@ -75,6 +80,7 @@ nav {
     background-color:var(--cor5);
     padding: 10px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.517);
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.436);
 }
 
 nav > a {
